fixed dark mode

--- a/index.css
+++ b/index.css
@@ -246,9 +246,9 @@ body {
 }
 
 .temp-letter {
-  font-size: 2rem;
+  font-size: 1.5rem;
   position: absolute;
-  top: .4rem;
+  top: .5rem;
 }
 
 .icon {
